--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^4.5.3",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-toaster": "^1.0.1",
+    "ngx-toastr": "^13.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular-devkit/build-angular": "^14.2.7",
     "@angular/cli": "~12.2.18",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
